# ets

./: .gitignore  Cargo.toml  LICENSE  README.md  email_extractor.py  email_filter.py  email_rules.json  ets.db  extractor_templates.json  index.ts  openclaw.plugin.json  package.json
src/: common.rs  db.rs  extractor.rs  filter.rs  main.rs
tests/: cli.rs
tests/fixtures/: test_rules.json  test_templates.json
