[package]
name = "ets"
version = "1.2.0"
edition = "2021"

[[bin]]
name = "ets"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
